reactapp/src/styles.css
/* This ensures there are no margins added by default */
html,
body {
    margin: 0;
    padding: 0;
    max-width: 100%;
    overflow-x: hidden;
}

/* ========== Colors ========== */

:root {
    --green: rgb(226, 240, 203);
}

/* Variants of the Rubik font to be used in font-family style */
@font-face {
    font-family: 'Rubik-S';
    src: url('./fonts/Rubik-Light.ttf') format('truetype');
}
@font-face {
    font-family: 'Rubik';
    src: url('./fonts/Rubik-Regular.ttf') format('truetype');
}
@font-face {
    font-family: 'Rubik-L';
    src: url('./fonts/Rubik-Medium.ttf') format('truetype');
}

.navbar-container {
    display: flex;
    justify-content: space-around;
    align-items: center;
    position: fixed;
    z-index: 2;
    top: 0%;
    left: 0%;
    width: 100vw;
    height: 64px;
    background-color: #fff;
    font-family: 'Roboto-M';
    border-bottom: 1px solid var(--agahi-gray);
}

.home-container {
    min-height: 100vh;
    background-color: var(--green);
    margin-top: 64px;
}

.home-title-container {
    position: absolute;
    display: block;
}

.home-title-font {
    font-family: 'Rubik-L';
    font-size: 2.5rem;
}

.robert-container-animation {
    position: absolute;
    animation-duration: 2s;
    animation-timing-function: linear;
    animation-name: rca;
    margin-left: 60%;
    margin-top: 15%;
    overflow: hidden;
}

@keyframes rca {
    from {
        margin-left: 100%;
    }
    to {
        margin-left: 60%;
    }
}

